# file-read-write-sycamore

back-end/: Cargo.toml
back-end/data/: data.txt
back-end/src/: main.rs
front-end/: Cargo.toml
front-end/src/: backup.rs  lib.rs
